force-app/main/default/objects/WSM_Capacity_Filter__c/WSM_Capacity_Filter__c.object-meta.xml
<CustomObject>
    <description>One WHERE clause row on a Capacity Query, e.g. "Employer_Status__c equals Contracted". Filter Number is what the parent's Filter Logic refers to. Field names and operators are validated against the org schema and a closed operator list before any query runs, and every value is passed as a bind variable, so nothing an admin types is ever concatenated into SOQL.</description>
    <label>Capacity Filter</label>
    <nameField>
        <displayFormat>CAPF-{00000}</displayFormat>
        <label>Capacity Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capacity Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>