force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Capacity_Query__c.field-meta.xml
<CustomField>
    <fullName>WSM_Capacity_Query__c</fullName>
    <description>The capacity query this filter row belongs to. Deleting the capacity query deletes its filters.</description>
    <inlineHelpText>Parent capacity query.</inlineHelpText>
    <label>Capacity Query</label>
    <referenceTo>WSM_Capacity_Query__c</referenceTo>
    <relationshipLabel>Filters</relationshipLabel>
    <relationshipName>Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>