force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Field__c.field-meta.xml
<CustomField>
    <fullName>WSM_Field__c</fullName>
    <description>API name of the field to filter on, on the capacity query&apos;s object. Validated against the org schema before any query runs; the schema&apos;s own resolved name is what goes into the SOQL, never the typed string.</description>
    <inlineHelpText>API name of the field to filter, e.g. Employer_Status__c.</inlineHelpText>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>