force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Filter_Number__c.field-meta.xml
<CustomField>
    <fullName>WSM_Filter_Number__c</fullName>
    <description>The number this filter is referred to by in the parent&apos;s Filter Logic. Must be unique within the capacity query and start at 1.</description>
    <inlineHelpText>The number Filter Logic uses to refer to this row. Start at 1.</inlineHelpText>
    <label>Filter Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>