force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Operator__c.field-meta.xml
<CustomField>
    <fullName>WSM_Operator__c</fullName>
    <description>Comparison to apply. This is a closed list mapped to SOQL fragments in Apex, so no operator text an admin types can ever reach a query. Use in and not in with a comma-separated Value. Use includes and excludes for multi-select picklists only. is null and is not null ignore Value.</description>
    <inlineHelpText>How to compare. Use in / not in with a comma-separated Value.</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>ends with</fullName>
            </value>
            <value>
                <fullName>is null</fullName>
            </value>
            <value>
                <fullName>is not null</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>