force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Routed_Record_Field__c.field-meta.xml
<CustomField>
    <fullName>WSM_Routed_Record_Field__c</fullName>
    <description>API name of the field on the record being routed that supplies this filter&apos;s value, used when Value Source is Routed Record Field. The engine reads only the fields named here, only from the record Id the caller passed in, and only to build the count. Requires the caller to pass Assigned Record Id.</description>
    <inlineHelpText>Field on the incoming record that supplies the value.</inlineHelpText>
    <label>Routed Record Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>