force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Value__c.field-meta.xml
<CustomField>
    <fullName>WSM_Value__c</fullName>
    <description>The comparison value. For Literal, typed as text and converted to the field&apos;s type (numbers, dates as YYYY-MM-DD, booleans as true/false, comma-separated for in and not in). For Relative Date, a whitelisted date literal such as LAST_N_DAYS:30, THIS_MONTH or LAST_90_DAYS. Ignored for is null, is not null, and Routed Record Field.</description>
    <inlineHelpText>Value to compare against. Comma-separate for in / not in.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>