force-app/main/default/objects/WSM_Capacity_Filter__c/fields/WSM_Value_Source__c.field-meta.xml
<CustomField>
    <fullName>WSM_Value_Source__c</fullName>
    <description>Where the comparison value comes from. Literal uses Value as typed, converted to the field&apos;s type and passed as a bind variable. Relative Date uses a Salesforce date literal from a closed whitelist, e.g. LAST_N_DAYS:30, which is how you make a count drain over time instead of growing forever. Routed Record Field reads Value off the record being routed, which lets a cap depend on the incoming record; it supports the equals operator only.</description>
    <inlineHelpText>Literal, a date literal like LAST_N_DAYS:30, or a field off the record being routed.</inlineHelpText>
    <label>Value Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Literal</fullName>
                <default>true</default>
                <label>Literal</label>
            </value>
            <value>
                <fullName>Relative Date</fullName>
            </value>
            <value>
                <fullName>Routed Record Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>